--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 Pinterest changed their HTML constructions. It's mainly based on javascript.
-So change the method to get source HTML for useing 'Phantomjs'. 
+So change the method to get source HTML for useing 'Phantomjs'.
+
+Pinterest.pm is a plagger plugin CustomFeed::Pinterest. 
